--- a/fv/Makefile.fpc
+++ b/fv/Makefile.fpc
@@ -8,17 +8,10 @@ version=1.9.4
 
 [target]
 units=buildfv
-implicitunits=app callspec colortxt dialogs drivers editors fileio \
+implicitunits=app colortxt dialogs drivers editors \
               fvcommon fvconsts gadgets histlist inplong memory \
               menus msgbox resource statuses stddlg tabs time validate \
-              views gfvgraph
-units_go32v2=sysmsg
-units_win32=sysmsg
-units_linux=sysmsg
-units_freebsd=sysmsg
-units_netbsd=sysmsg
-units_openbsd=sysmsg
-units_darwin=sysmsg
+              views sysmsg
 exampledirs=test
 
 [libs]
