--- a/ide/Makefile.fpc
+++ b/ide/Makefile.fpc
@@ -68,30 +68,31 @@ endif
 
 # Try to find GDB library
 ifeq ($(GDB),1)
-ifeq ($(DEBUG),1)
-# First test if a debug version exists in a specific dir
-ifneq ($(strip $(wildcard $(addsuffix /$(GDBINT)/libgdb/d$(OS_TARGET)/libgdb.a,$(PACKAGESDIR)))),)
-OSGDBDIR=d$(OS_TARGET)
-else
-OSGDBDIR=$(OS_TARGET)
+
+# Look for a valid GDBLIBDIR environment variable
+ifdef GDBLIBDIR
+override LIBGDBFILE:=$(firstword $(wildcard $(addsuffix /libgdb.a,$(GDBLIBDIR))))
 endif
-else
-OSGDBDIR=$(OS_TARGET)
+
+# Use default dirs if not available
+ifeq ($(LIBGDBFILE),)
+# Find gdbint package
+GDBINTDIR=$(wildcard $(addsuffix /$(GDBINT),$(PACKAGESDIR)))
+# Default locations <target>/<cpu> (linux) or <target> (win32,go32v2) only
+override GDBLIBDIR=$(wildcard $(GDBINTDIR)/libgdb/$(OS_TARGET)/$(CPU_TARGET))
+ifeq ($(GDBLIBDIR),)
+override GDBLIBDIR=$(GDBINTDIR)/libgdb/$(OS_TARGET)
 endif
-GDBLIBDIR+=$(wildcard $(addsuffix /$(GDBINT)/libgdb/$(OSGDBDIR),$(PACKAGESDIR)))
-GDBOBJDIR+=$(wildcard $(addsuffix /$(GDBINT)/libgdb/$(OSGDBDIR),$(PACKAGESDIR)))
-ifeq ($(OS_TARGET),go32v2)
-ifneq ($(DJDIR),)
-GDBLIBDIR+=$(DJDIR)/lib
+# Detect if libgdb.a is available
+override LIBGDBFILE:=$(firstword $(wildcard $(addsuffix /libgdb.a,$(GDBLIBDIR))))
 endif
+
+# Disable GDB when no libgdb.a found
+ifeq ($(LIBGDBFILE),)
+override GDB=
 endif
-ifeq ($(strip $(wildcard $(addsuffix /libgdb.a,$(GDBLIBDIR)))),)
-override GDB=0
-GDBFOUND=0
-else
-override LIBGDB=$(firstword $(wildcard $(addsuffix /libgdb.a,$(GDBLIBDIR))))
-GDBFOUND=1
-endif
+
+# end GDB defined
 endif
 
 ifeq ($(GDB),1)
@@ -223,7 +224,10 @@ clean_compiler:
 
 #
 # $Log$
-# Revision 1.23  2004-11-02 09:14:09  peter
+# Revision 1.24  2004-11-05 12:48:45  peter
+# finding of libgdb.a updated
+#
+# Revision 1.23  2004/11/02 09:14:09  peter
 #   * fix build with gdb
 #
 # Revision 1.22  2004/10/30 12:36:43  peter
