--- a/packages/base/gdbint/Makefile.fpc
+++ b/packages/base/gdbint/Makefile.fpc
@@ -39,12 +39,14 @@ endif
 
 # Use default dirs if not available
 ifeq ($(LIBGDBFILE),)
+
+# Default locations <target>/<cpu> (linux) or <target> (win32,go32v2) only
+override GDBLIBDIR=$(wildcard libgdb/$(OS_TARGET)/$(CPU_TARGET))
+ifeq ($(GDBLIBDIR),)
 override GDBLIBDIR=libgdb/$(OS_TARGET)
-ifeq ($(OS_TARGET),go32v2)
-ifneq ($(DJDIR),)
-GDBLIBDIR+=$(DJDIR)/lib
 endif
 endif
+
 # Detect if libgdb.a is available
 override LIBGDBFILE:=$(firstword $(wildcard $(addsuffix /libgdb.a,$(GDBLIBDIR))))
 endif
