--- a/packages/base/gdbint/Makefile.fpc
+++ b/packages/base/gdbint/Makefile.fpc
@@ -39,14 +39,11 @@ endif
 
 # Use default dirs if not available
 ifeq ($(LIBGDBFILE),)
-
 # Default locations <target>/<cpu> (linux) or <target> (win32,go32v2) only
-override GDBLIBDIR=$(wildcard libgdb/$(OS_TARGET)/$(CPU_TARGET))
+override GDBLIBDIR=$(wildcard $(FPCDIR)/libgdb/$(OS_TARGET)/$(CPU_TARGET))
 ifeq ($(GDBLIBDIR),)
-override GDBLIBDIR=libgdb/$(OS_TARGET)
+override GDBLIBDIR=$(FPCDIR)/libgdb/$(OS_TARGET)
 endif
-endif
-
 # Detect if libgdb.a is available
 override LIBGDBFILE:=$(firstword $(wildcard $(addsuffix /libgdb.a,$(GDBLIBDIR))))
 endif
