--- a/fcl/Makefile.fpc
+++ b/fcl/Makefile.fpc
@@ -22,8 +22,8 @@ units=adler gzcrc gzio infblock infcodes inffast inftrees infutil minigzip paszl
 [target]
 dirs=xml image db shedit passrc net
 units=$(CLASSES10) contnrs inifiles ezcgi pipes rtfpars idea base64 gettext \
-      iostream zstream cachecls xmlreg registry eventlog custapp cgiapp \
-      wformat whtml wtex rttiutils avl_tree
+      iostream zstream cachecls avl_tree xmlreg registry eventlog custapp cgiapp \
+      wformat whtml wtex rttiutils
 units_freebsd=process ssockets resolve fpasync syncobjs
 units_darwin=process ssockets resolve fpasync syncobjs
 units_netbsd=process ssockets resolve fpasync
@@ -70,4 +70,5 @@ classes$(PPUEXT): $(COMPILER_UNITTARGETDIR)
 	$(COMPILER) -Ficlasses -Ficlasses/$(OS_TARGET) classes/$(OS_TARGET)/classes.pp
 endif
 
-xmlreg.pp: xml
+# xmlreg needs the XML units, XML units depend on avl_tree
+xmlreg.pp: avl_tree$(PPUEXT) xml
