--- a/install/debian/rules
+++ b/install/debian/rules
@@ -155,7 +155,7 @@ install-arch-stamp: build-arch-stamp debian-files-stamp
 
 # Create fpc.cfg which is included as conffile
 	chmod 755 compiler/utils/samplecfg 
-	compiler/utils/samplecfg "/usr/lib/fpc/\$$version" $(INSTALL_DIR)/etc
+	compiler/utils/samplecfg "/usr/lib/fpc/\$$fpcversion" $(INSTALL_DIR)/etc
 	touch install-arch-stamp
 
 
