--- a/tests/units/Makefile.fpc
+++ b/tests/units/Makefile.fpc
@@ -10,83 +10,42 @@ fpcpackage=y
 [clean]
 units = erroru win32err ptest
 
+[compiler]
+targetdir=$(FULL_TARGET)
+
 [default]
 fpcdir=../..
 
 [rules]
-
-# Only 1.1 has Classes in the RTL
-ifneq ($(findstring 1.0.,$(FPC_VERSION)),)
-FCL=fcl
-endif
-
-.PHONY: rtl $(FCL) extra all clean cleanrtlfcl clean_ctest
+.PHONY: rtl extra all clean cleanrtl clean_ctest
 
 #############################
-# RTL and FCL
+# RTL
 #
 
 DUMMYINSTALLDIR=$(BASEDIR)/tmp
-INSTALLOPT=INSTALL_PREFIX=$(DUMMYINSTALLDIR) INSTALL_UNITDIR=$(BASEDIR)
+INSTALLOPT=INSTALL_PREFIX=$(DUMMYINSTALLDIR) INSTALL_UNITDIR=$(BASEDIR)/$(COMPILER_TARGETDIR)
 
-ifndef USEUNITDIR
-
-rtl-stamp:
+rtl-stamp.$(FULL_TARGET):
         $(MAKE) -C ../../rtl all "OPT=$(OPT) -n"
+        $(DELTREE) $(COMPILER_TARGETDIR)
         $(MAKE) -C ../../rtl install $(INSTALLOPT)
-        $(ECHO) Compiled > rtl-stamp
+        $(ECHO) Compiled > rtl-stamp.$(FULL_TARGET)
 
-ifdef FCL
-fcl-stamp:
-        $(MAKE) -C ../../packages/base all "OPT=$(OPT) -n"
-        $(MAKE) -C ../../fcl all "OPT=$(OPT) -n"
-        $(MAKE) -C ../../fcl install $(INSTALLOPT)
-        $(ECHO) Compiled > fcl-stamp
-endif
-
-cleanrtlfcl : cleanall
-#        $(MAKE) -C ../../rtl clean
-#        $(MAKE) -C ../../fcl clean
+cleanrtl:
+        $(DELTREE) $(COMPILER_TARGETDIR)
         $(DELTREE) $(DUMMYINSTALLDIR)
-        -$(DEL) rtl-stamp  fcl-stamp
+        -$(DEL) rtl-stamp.$(FULL_TARGET)
 
-else
+rtl : rtl-stamp.$(FULL_TARGET)
 
-rtl-stamp:
-#       Just copying everything doesn't work, because then the Makefile will be overwritten
-        -$(COPY) $(USEUNITDIR)/*$(PPUEXT) .
-        -$(COPY) $(USEUNITDIR)/*$(OEXT) .
-        -$(COPY) $(USEUNITDIR)/*$(ASMEXT) .
-        -$(COPY) $(USEUNITDIR)/*_ppas$(BATCHEXT) .
-        $(ECHO) Copied > rtl-stamp
-
-ifdef FCL
-fcl-stamp: rtl-stamp
-        $(ECHO) Copied > fcl-stamp
-endif
-
-cleanrtlfcl :
-        -$(DEL) *$(PPUEXT)
-        -$(DEL) *$(OEXT)
-        -$(DEL) *$(ASMEXT)
-        -$(DEL) *_ppas$(BATCHEXT)
-        -$(DEL) rtl-stamp fcl-stamp
-
-endif
-
-
-rtl : rtl-stamp
-
-ifdef FCL
-fcl : fcl-stamp
-endif
 
 #############################
 # Extra units
 #
 
 
-TESTOPT=-n -FE. -Fu. -T$(OS_TARGET) $(OPT)
+TESTOPT=-n -FE$(COMPILER_TARGETDIR) -T$(OS_TARGET) $(OPT)
 ifneq ($(BINUTILSPREFIX),)
 override TESTOPT+=-XP$(BINUTILSPREFIX) -Xc
 endif
@@ -120,9 +79,9 @@ endif
 # Main rules
 #
 
-all : rtl $(FCL) extra
+all : rtl  extra
 
-clean : cleanrtlfcl fpc_clean
+clean : cleanrtl cleanall
 
 clean_ctest :
         -$(DEL) ../test/cg/obj/$(OS_TARGET)/$(CPU_TARGET)/ctest.o
