--- a/packages/extra/gnome1/gconf/Makefile.fpc
+++ b/packages/extra/gnome1/gconf/Makefile.fpc
@@ -29,6 +29,6 @@ fpcdir=../../../..
 
 
 [rules]
-gconf$(PPUEXT): $(wildcard gconf/gconf*.pp) gconf$(PPUEXT)
+gconf$(PPUEXT): $(wildcard gconf/gconf*.pp) 
 
-gconfclient$(PPUEXT): $(wildcard gconfclient/gconfclient*.pp) gconfclient$(PPUEXT)
+gconfclient$(PPUEXT): $(wildcard gconfclient/gconfclient*.pp)
