+ Moved targets to units

--- a/fcl/fpcunit/tests/Makefile.fpc
+++ b/fcl/fpcunit/tests/Makefile.fpc
@@ -6,7 +6,7 @@
 main=fcl
 
 [target]
-examples=asserttest frameworktest suitetest
+units=asserttest frameworktest suitetest
 
 [compiler]
 options=-S2h
