* fixes for 8.3 platforms

--- a/utils/fpcm/fpcmake.ini
+++ b/utils/fpcm/fpcmake.ini
@@ -10,7 +10,7 @@
 # OS categories
 BSDs = freebsd netbsd openbsd darwin
 UNIXs = linux $(BSDs) sunos qnx
-LIMIT83fs = go32v2 os2
+LIMIT83fs = go32v2 os2 emx watcom
 
 #Empty target for rules that always should run. Needed if
 #the target is non-phoney, and there is non-phony prereqisites.
@@ -895,7 +895,7 @@ endif
 # Generate fpcmade.<x>, use for 8.3 limited OS's the short extension
 # Otherwise use the full name
 ifneq ($(findstring $(OS_SOURCE),$(LIMIT83fs)),)
-FPCMADE=fpcmade$(FPCMADEEXT)
+FPCMADE=fpcmade.$(FPCMADEEXT)
 else
 FPCMADE=fpcmade.$(FULL_TARGET)
 endif
