* only have exampletests as exampledir

--- a/fcl/fpcunit/Makefile.fpc
+++ b/fcl/fpcunit/Makefile.fpc
@@ -7,7 +7,7 @@ main=fcl
 
 [target]
 units=fpcunit  testregistry  testreport testutils
-exampledirs=exampletests tests
+exampledirs=exampletests
 
 [compiler]
 options=-S2h
